--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,8 +31,8 @@
         </div>
         <div class="space-y-2 text-center">
           <p class="font-bold border-dotted border-b-4 border-point"><%= @post.title %>
-          <p class="font-bold text-left">お酒：<%= @post.alcohol %></p>
-          <p class="font-bold text-left">おつまみ：<%= @post.appetizer %></p>
+          <p class="font-bold text-left">お酒 <i class="fa-solid fa-wine-glass"></i>：<%= @post.alcohol %></p>
+          <p class="font-bold text-left">おつまみ <i class="fa-solid fa-utensils"></i>：<%= @post.appetizer %></p>
           <%= simple_format(@post.body, { class: 'text-left text-sm' }, wrapper_tag: "div") %>
           <div class="flex justify-between">
             <div class="flex flex-row items-center">
