--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -4,7 +4,7 @@
   <% end %>
   <div class="w-full sm:w-2/3 lg:w-1/5 mb-5 mx-1">
     <%= f.label :title_or_body_cont, 'タイトル・本文' %>
-    <%= f.search_field :title_or_body_cont, class: 'input border-gray-400 w-full', placeholder: 'キーワードを入力' %>
+    <%= f.search_field :title_or_body_cont, class: 'border border-gray-400 rounded-lg w-full px-5 py-3', placeholder: 'キーワードを入力' %>
   </div>
   <div class="w-full sm:w-2/3 lg:w-1/5 mb-5 mx-1">
     <%= f.label :alcohol_genre_id_eq, 'お酒のジャンル' %>
@@ -15,6 +15,8 @@
     <%= f.collection_select :appetizer_genre_id_eq, AppetizerGenre.all, :id, :genre, { include_blank: '未選択' }, { class: 'border border-gray-400 rounded-lg text-gray-500 w-full px-5 py-3' } %>
   </div>
   <div class="flex justify-center items-end w-full sm:w-2/3 lg:w-1/5 mb-5 mx-1">
-    <%= f.submit class: 'bg-point hover:bg-yellow-400 shadow-xl rounded-full px-20 py-3 h-12' %>
+    <%= button_tag(type: 'submit', class: 'bg-point hover:bg-yellow-400 shadow-xl rounded-full px-20 py-3 h-12 flex justify-center items-center') do %>
+      検索<i class="fa-solid fa-magnifying-glass"></i>
+    <% end %>
   </div>
 <% end %>
