--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,3 +1,4 @@
-<div class="flex flex-col justify-center w-full", id="table-comment">
+<h1 class="flex justify-center font-bold text-base sm:text-xl mb-10">この投稿へのコメント</h1>
+<div class="flex flex-col justify-center w-full pb-10", id="table-comment">
   <%= render comments %>
 </div>
