--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,15 +1,28 @@
 <div class="w-5/6 mx-auto max-w-screen-xl">
-  <div class="flex flex-col justify-center items-center mt-20 sm:mt-60">
-    <h1 class="text-xl sm:text-3xl font-bold text-center drop-shadow-xl">
-        酒菜ネットは、お酒&おつまみの情報共有サービスです
-    </h1>
-    <ul class="list-disc mt-14 text-sm sm:text-base">
-      <li class="py-2">いつもと違うお酒が飲んでみたいが、どれが良いのだろう...</li>
-      <li class="py-2">家飲みがマンネリ化している...</li>
-    </ul>
-    <p class="my-10 text-sm sm:text-base">このような悩みありませんか？？</p>
-    <p class="py-2 text-sm sm:text-base">みんなのアイデアで晩酌、飲み会をより豊かに...</p>
-    <p class="pt-2 text-sm sm:text-base">まずは、みんなの投稿を見に行きましょう！</p>
-    <%= link_to 'みんなの投稿へ', posts_path, class: 'bg-point hover:bg-yellow-400 text-black text-xl sm:text-3xl font-bold rounded-[10px] my-12 sm:my-20 px-5 sm:px-10 py-2 sm:py-5 shadow-xl' %>
+  <div class="flex justify-center items-center flex-col-reverse md:flex-row mt-10 md:mt-40">
+    <div class="w-full md:w-1/2 flex flex-col mt-10 md:mt-0">
+      <div class="space-y-2">
+        <h1 class="text-xl md:text-4xl font-bold text-center drop-shadow-xl">
+          酒菜ネットは、お酒&おつまみの
+        </h1>
+        <h1 class="text-xl md:text-4xl font-bold text-center drop-shadow-xl">
+          情報共有サービスです
+        </h1>
+      </div>
+      <div class="mx-auto my-10">
+        <p class="text-center text-sm md:text-base mb-10">このような経験ありませんか？？</p>
+        <p class="rounded-full bg-gradient-to-r from-gray-800 to-gray-500 font-bold text-white text-center p-2 mb-4">いつもと違うお酒が飲んでみたい...</p>
+        <p class="rounded-full bg-gradient-to-r from-gray-800 to-gray-500 font-bold text-white text-center p-2 mb-4">どのお酒が良いのだろう...</p>
+        <p class="rounded-full bg-gradient-to-r from-gray-800 to-gray-500 font-bold text-white text-center p-2">自宅での晩酌がマンネリ化している...</p>
+      </div>
+    </div>
+    <div class="flex items-center justify-center w-full md:w-1/2">
+      <%= image_tag 'top_icon.webp', class: 'rounded-xl border shadow-2xl w-72 h-auto md:w-80 md:h-auto' %>
+    </div>
+  </div>
+  <p class="pt-6 text-center text-sm md:text-base">みんなのアイデアで晩酌、飲み会をより豊かに...</p>
+  <p class="pt-2 text-center text-sm md:text-base">まずは、みんなの投稿を見に行きましょう！</p>
+  <div class="flex justify-center">
+    <%= link_to 'みんなの投稿へ', posts_path, class: 'bg-point hover:bg-yellow-400 text-black text-xl md:text-3xl font-bold rounded-[10px] my-6 md:my-8 px-5 md:px-10 py-2 md:py-5 shadow-xl skeleton' %>
   </div>
 </div>
