add: googleフォームを使用してお問い合わせフォーム作成

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <nav class="flex flex-wrap justify-center gap-x-10 gap-y-6 md:justify-start md:gap-20 text-sm sm:text-base">
       <%= link_to '利用規約', root_path %>
       <%= link_to 'プライバシーポリシー', root_path %>
-      <%= link_to 'お問い合わせ', root_path %>
+      <%= link_to 'お問い合わせ', 'https://docs.google.com/forms/d/e/1FAIpQLScQm4bdjnHq9EqMRKA2jHRAMCEMVSjHkUUR6yDcSZbWSLkuXw/viewform?usp=sf_link', class: 'hover:text-gray-500', target: '_blank' %>
     </nav>
   </div>
   <aside class="text-sm">
