fix: iosデバイスでコメントエリアの表示が崩れるバグを修正

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,4 +1,4 @@
 <h1 class="flex justify-center font-bold text-base sm:text-xl mb-10">この投稿へのコメント</h1>
-<div class="flex flex-col justify-center w-full pb-10", id="table-comment">
+<div class="w-full pb-10", id="table-comment">
   <%= render comments %>
 </div>
