--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-  <div class="w-full space-y-2">
+  <div class="w-full">
     <%= render 'comments/comments', { comments: @comments } %>
     <%= render 'comments/form', { post: @post, comment: @comment } %>
   </div>
