--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,14 +11,14 @@
       </div>
       <%= l post.created_at, format: :long %>
     </div>
-    <div class="flex items-center justify-center w-full h-64 ">
+    <div class="flex items-center justify-center w-full">
       <% if post.post_image? %>
         <%= link_to post_path(post) do %>
-          <%= image_tag post.post_image.url, class: 'max-w-full max-h-full' %>
+          <%= image_tag post.post_image.url %>
         <% end %>
       <% else %>
         <%= link_to post_path(post) do %>
-          <%= image_tag 'post_placeholder.png', class: 'max-w-full max-h-full' %>
+          <%= image_tag 'post_placeholder.png' %>
         <% end %>
       <% end %>
     </div>
