--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="flex flex-col items-center mb-2">
     <nav class="flex flex-wrap justify-center gap-x-10 gap-y-6 md:justify-start md:gap-20 text-sm sm:text-base">
       <%= link_to '利用規約', terms_of_use_path, class: 'hover:text-gray-500' %>
-      <%= link_to 'プライバシーポリシー', root_path %>
+      <%= link_to 'プライバシーポリシー', privacy_policy_path, class: 'hover:text-gray-500' %>
       <%= link_to 'お問い合わせ', 'https://docs.google.com/forms/d/e/1FAIpQLScQm4bdjnHq9EqMRKA2jHRAMCEMVSjHkUUR6yDcSZbWSLkuXw/viewform?usp=sf_link', class: 'hover:text-gray-500', target: '_blank' %>
     </nav>
   </div>
