--- a/app/views/appetizers/_form.html.erb
+++ b/app/views/appetizers/_form.html.erb
@@ -1,16 +1,25 @@
 <%= form_with model: appetizer, url: appetizers_path do |f| %>
-  <%= f.label :alcohol, 'お酒' %>
-  <%= f.collection_select :alcohol_id, Alcohol.all, :id, :name, { include_blank: '未選択' }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
+  <div class="flex flex-col md:flex-row items-center">
+    <div class="w-full md:w-1/3">
+      <%= f.label :alcohol, 'お酒' %>
+      <%= f.grouped_collection_select :alcohol_id, AlcoholGenre.all, :alcohols, :genre, :id, :name, {include_blank: '未選択'}, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
+    </div>
 
-  <%= f.label :base_ingredient, 'ベースの食材' %>
-  <%= f.collection_select :base_ingredient_id, Ingredient.where(category: 'base'), :id, :name, { include_blank: '未選択' }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
+    <div class="w-full md:w-1/3 text-center">
+      <i class="fa-solid fa-xmark fa-7x"></i>
+    </div>
 
-  <%= f.label :sub_ingredient, 'サブの食材' %>
-  <%= f.collection_select :sub_ingredient_id, Ingredient.where(category: 'sub'), :id, :name, { include_blank: '未選択' }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
+    <div class="w-full md:w-1/3">
+      <%= f.label :base_ingredient, 'ベースの食材' %>
+      <%= f.collection_select :base_ingredient_id, Ingredient.where(category: 'base'), :id, :name, { include_blank: '未選択' }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-10' %>
 
-  <%= f.label :accent_ingredient, 'アクセントの食材' %>
-  <%= f.collection_select :accent_ingredient_id, Ingredient.where(category: 'accent'), :id, :name, { include_blank: '未選択' }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3' %>
+      <%= f.label :sub_ingredient, 'サブの食材' %>
+      <%= f.collection_select :sub_ingredient_id, Ingredient.where(category: 'sub'), :id, :name, { include_blank: '未選択' }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-10' %>
 
+      <%= f.label :accent_ingredient, 'アクセントの食材' %>
+      <%= f.collection_select :accent_ingredient_id, Ingredient.where(category: 'accent'), :id, :name, { include_blank: '未選択' }, class: 'border border-gray-400 rounded-lg w-full px-5 py-3' %>
+    </div>
+  </div>
   <div class="sm-text-lg font-semibold text-center">
     <%= f.submit '提案してもらう', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full px-5 py-3' %>
   </div>
