add: ヘッダー、詳細ページにリンク追加

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,6 +6,7 @@
       <ul class="space-y-10">
         <li><%= link_to '過去の投稿一覧', posted_posts_path, class:'hover:text-yellow-400' %></li>
         <li><%= link_to 'いいね済み一覧', likes_posts_path, class:'hover:text-yellow-400' %></li>
+        <li><%= link_to 'AI組合せ一覧', user_appetizers_path(@user), class:'hover:text-yellow-400' %></li>
         <li><%= link_to 'プロフィール設定', edit_profile_path, class:'hover:text-yellow-400' %></li>
       </ul>
     </div>
