--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,6 @@
   <% end %>
   <div class="mt-10">
     <%= link_to '過去の投稿一覧を見る', user_posts_path(@user), class: 'hover:text-yellow-400 hover:border-yellow-400 border-b border-gray-500' %>
+    <%= link_to 'AI組合せを見る', user_appetizers_path(@user), class: 'hover:text-yellow-400 hover:border-yellow-400 border-b border-gray-500' %>
   </div>
 </div>
