--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,12 +10,14 @@
     <ul id="menu" class="fixed top-0 left-0 z-0 w-full bg-point text-center font-bold translate-x-full transition ease-linear">
       <li class="p-1 sm:p-3"><%= link_to t('header.post_index'), posts_path, class: 'hover:text-gray-500' %></li>
       <li class="p-1 sm:p-3"><%= link_to t('header.create_post'), new_post_path, class: 'hover:text-gray-500' %></li>
+      <li class="p-1 sm:p-3"><%= link_to t('header.create_appetizer'), new_appetizer_path, class: 'hover:text-gray-500' %></li>
       <li class="p-1 sm:p-3"><%= link_to t('header.my_page'), profile_path, class: 'hover:text-gray-500' %></li>
       <li class="p-1 sm:p-3"><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete }, class: 'hover:text-gray-500' %></li>
     </ul>
     <div class="space-x-14 items-center text-lg font-bold md:flex hidden md:block">
       <%= link_to t('header.post_index'), posts_path, class: 'hover:text-gray-500' %>
       <%= link_to t('header.create_post'), new_post_path, class: 'hover:text-gray-500' %>
+      <%= link_to t('header.create_appetizer'), new_appetizer_path, class: 'hover:text-gray-500' %>
       <div class="dropdown dropdown-hover">
         <% if current_user.avatar? %>
           <%= image_tag current_user.avatar.url, class:"rounded-[10px] w-10 h-10" %>
