--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -30,7 +30,7 @@
   </div>
   <div class="mb-5">
     <%= f.label :address, '住所' %>
-    <%= f.text_field :address, class: 'border border-gray-400 rounded-[10px] w-full p-2', rows: 3, placeholder: Post.human_attribute_name(:body) %>
+    <%= f.text_field :address, id: 'address', class: 'border border-gray-400 rounded-[10px] w-full p-2', rows: 3, placeholder: Post.human_attribute_name(:body) %>
   </div>
   <div class="flex flex-col sm:flex-row mb-5">
     <div class="w-full md:w-1/2 mb-5">
@@ -46,3 +46,24 @@
     <%= f.submit t('helpers.submit.post'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
   </div>
 <% end %>
+<script>
+  function initAutocomplete() {
+    var addressInput = document.getElementById('address');
+
+    var autocomplete = new google.maps.places.Autocomplete(addressInput, {
+      types: ['restaurant', 'bar'],
+      componentRestrictions: {country: "jp"} // 日本国内の住所のみを検索する場合
+    });
+
+    // 住所選択時のイベントリスナー
+    autocomplete.addListener('place_changed', function() {
+      var place = autocomplete.getPlace();
+      if (!place.geometry) {
+        // 選択された場所に位置情報がない場合のエラーハンドリング
+        window.alert("No details available for input: '" + place.name + "'");
+        return;
+      }
+    });
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&libraries=places&callback=initAutocomplete" async defer></script>
