--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -43,27 +43,36 @@
     </div>
   </div>
   <div class="sm-text-lg font-semibold text-center">
-    <%= f.submit t('helpers.submit.post'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
+    <%= f.submit t('helpers.submit.post'), id: 'new_post', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
   </div>
 <% end %>
 <script>
   function initAutocomplete() {
     var addressInput = document.getElementById('address');
+    var validPlaceSelected = false; // ユーザーが候補から選択したかどうかを判定する真偽値
 
     var autocomplete = new google.maps.places.Autocomplete(addressInput, {
       types: ['restaurant', 'bar'],
-      componentRestrictions: {country: "jp"} // 日本国内の住所のみを検索する場合
+      componentRestrictions: {country: "jp"} // 日本国内の住所のみ検索
     });
 
     // 住所選択時のイベントリスナー
     autocomplete.addListener('place_changed', function() {
       var place = autocomplete.getPlace();
       if (!place.geometry) {
-        // 選択された場所に位置情報がない場合のエラーハンドリング
-        window.alert("No details available for input: '" + place.name + "'");
-        return;
+        validPlaceSelected = false; // 有効な場所が選択されていない
+      } else {
+        validPlaceSelected = true; // 有効な場所が選択された
+      }
+    });
+
+    // フォームの送信時のイベントハンドラーを追加
+    document.getElementById('new_post').addEventListener('submit', function(e) {
+      if (!validPlaceSelected) {
+        e.preventDefault(); // フォームの送信を阻止
+        alert("リストから住所を選択してください。");
       }
     });
 }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&libraries=places&callback=initAutocomplete" async defer></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&libraries=places&callback=initAutocomplete"></script>
