update: 入力フォームのラベル、プレースホルダ修正

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,8 +29,8 @@
     <%= f.text_area :body, class: 'border border-gray-400 rounded-[10px] w-full p-2', rows: 3, placeholder: Post.human_attribute_name(:body) %>
   </div>
   <div class="mb-5">
-    <%= f.label :address, '住所' %>
-    <%= f.text_field :address, id: 'address', class: 'border border-gray-400 rounded-[10px] w-full p-2', rows: 3, placeholder: Post.human_attribute_name(:body) %>
+    <%= f.label :address, 'スポット名' %>
+    <%= f.text_field :address, id: 'address', class: 'border border-gray-400 rounded-[10px] w-full p-2', rows: 3, placeholder: "スポット名を入力してください" %>
   </div>
   <div class="flex flex-col sm:flex-row mb-5">
     <div class="w-full md:w-1/2 mb-5">
