--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="sm-text-lg font-semibold text-center">
-    <%= f.submit t('helpers.submit.post'), id: 'new_post', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
+    <%= f.submit t('helpers.submit.post'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
   </div>
 <% end %>
 <script>
@@ -59,19 +59,7 @@
     // 住所選択時のイベントリスナー
     autocomplete.addListener('place_changed', function() {
       var place = autocomplete.getPlace();
-      if (!place.geometry) {
-        validPlaceSelected = false; // 有効な場所が選択されていない
-      } else {
-        validPlaceSelected = true; // 有効な場所が選択された
-      }
-    });
-
-    // フォームの送信時のイベントハンドラーを追加
-    document.getElementById('new_post').addEventListener('submit', function(e) {
-      if (!validPlaceSelected) {
-        e.preventDefault(); // フォームの送信を阻止
-        alert("リストから住所を選択してください。");
-      }
+      validPlaceSelected = !!place.geometry;  // 有効な場所が選択されたかを更新
     });
 }
 </script>
