--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,9 @@
 <% content_for(:title, t('.title')) %>
 <div class="container px-5 pt-12 md:pt-24 pb-10 mx-auto">
   <h1 class="text-lg sm:text-2xl font-bold my-10 text-center">
-    <% if params[:user_id] %>
-      <%= t('.user_posts_title') %>
-    <% else %>
-      <%= t('.title') %>
-    <% end %>
+    <%= params[:user_id] ? t('.user_posts_title') : t('.title') %>
   </h1>
-  <%= render 'search_form', q: @q, url: params[:user_id].present? ? user_posts_path(params[:user_id]) : posts_path %>
+  <%= render 'search_form', q: @q, url: params[:user_id] ? user_posts_path(params[:user_id]) : posts_path %>
   <% if @posts.present? %>
     <div class="flex flex-wrap mt-10">
       <% @posts.each do |post| %>
