--- a/app/views/appetizers/show.html.erb
+++ b/app/views/appetizers/show.html.erb
@@ -3,7 +3,7 @@
   <h1 class="text-lg sm:text-2xl font-bold my-20 text-center"><%= @appetizer.name %></h1>
   <p class="mb-10"><%= @appetizer.description %></p>
   <div class="flex flex-col md:flex-row items-center">
-    <% if current_user.present? %>
+    <% if logged_in? %>
       <div class="flex justify-center w-full md:w-1/2">
         <%= link_to "https://twitter.com/share?url=#{appetizer_url(@appetizer)}&text=#{ERB::Util.url_encode("「#{@appetizer.alcohol.name}」に合うおつまみは、「#{@appetizer.name}」！\n酒菜ネット | ")}&hashtags=sakananet", target: '_blank', data: { toggle: "tooltip", placement: "bottom" },
             class: 'bg-slate-950 hover:bg-slate-700 text-white font-bold rounded-full px-5 py-3' do %>
