--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
   <div class="border bg-amber-50 shadow-xl rounded-lg p-4">
     <div class="flex flex-row justify-between">
       <div class="flex flex-row items-center">
-        <%= user_avatar(post.user) %>
+        <%= display_user_avatar(post.user) %>
         <%= link_to post.user.name, post.user == current_user ? profile_path : user_path(post.user), class: 'hover:text-yellow-400' %>
       </div>
       <%= l post.created_at, format: :long %>
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="flex flex-col-reverse">
-        <%= display_like_button(current_user, post) %>
+        <%= display_like_button(post) %>
       </div>
     </div>
   </div>
