--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -46,21 +46,5 @@
     <%= f.submit t('helpers.submit.post'), class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full w-1/3 py-3' %>
   </div>
 <% end %>
-<script>
-  function initAutocomplete() {
-    var addressInput = document.getElementById('address');
-    var validPlaceSelected = false; // ユーザーが候補から選択したかどうかを判定する真偽値
 
-    var autocomplete = new google.maps.places.Autocomplete(addressInput, {
-      types: ['restaurant', 'bar'],
-      componentRestrictions: {country: "jp"} // 日本国内の住所のみ検索
-    });
-
-    // 住所選択時のイベントリスナー
-    autocomplete.addListener('place_changed', function() {
-      var place = autocomplete.getPlace();
-      validPlaceSelected = !!place.geometry;  // 有効な場所が選択されたかを更新
-    });
-}
-</script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&libraries=places&callback=initAutocomplete"></script>
+<script defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&libraries=places&callback=initAutocomplete"></script>
