--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -46,38 +46,11 @@
   </div>
   <% unless @post.address.blank? %>
     <div class="flex justify-center mb-5">
-      <div id="map" style="height: 500px; width: 800px"></div>
+      <div id="map" data-latitude="<%= @post.latitude %>" data-longitude="<%= @post.longitude %>" data-address="<%= @post.address %>" style="height: 500px; width: 800px"></div>
     </div>
   <% end %>
 
-  <script>
-    function initMap(){
-      // 地図の位置情報(緯度・経度)を取得
-      let mapPosition = {lat: <%= @post.latitude || 0 %> , lng: <%= @post.longitude || 0 %> };
-      let map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 17,
-        center: mapPosition
-      });
-      let transitLayer = new google.maps.TransitLayer();
-      transitLayer.setMap(map);
-
-      let contentString = '【住所】<%= @post.address %>';
-      let infowindow = new google.maps.InfoWindow({
-        content: contentString
-      });
-
-      let marker = new google.maps.Marker({
-        position: mapPosition,
-        map: map,
-        title: contentString
-      });
-
-      marker.addListener('click', function(){
-        infowindow.open(map, marker);
-      });
-   }
-  </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap"></script>
   <div class="w-full">
     <%= render 'comments/comments', { comments: @comments } %>
     <%= render 'comments/form', { post: @post, comment: @comment } %>
