--- a/app/views/appetizers/_form.html.erb
+++ b/app/views/appetizers/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="flex flex-col md:flex-row items-center">
     <div class="w-full md:w-1/3">
       <%= f.label :alcohol, 'お酒' %>
-      <%= f.grouped_collection_select :alcohol_id, @selected_genres, :alcohols, :genre, :id, :name, {include_blank: '未選択'}, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
+      <%= f.grouped_collection_select :alcohol_id, @alcohol_genres, :alcohols, :genre, :id, :name, {include_blank: '未選択'}, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
     </div>
 
     <div class="w-full md:w-1/3 text-center">
