--- a/app/views/appetizers/show.html.erb
+++ b/app/views/appetizers/show.html.erb
@@ -18,23 +18,30 @@
         <div class="bg-yellow-400 text-center px-4 py-2 rounded-full mr-5">2</div>
         <div class=""><%= @second_step %></div>
       </div>
-      <div class="flex items-start">
+      <div class="flex items-start mb-10">
         <div class="bg-yellow-400 text-center px-4 py-2 rounded-full mr-5">3</div>
         <div class=""><%= @third_step %></div>
       </div>
     </div>
   <% end %>
-  <div class="flex flex-col md:flex-row items-center mt-10 md:mt-0">
+  <div class="flex flex-col md:flex-row items-center mb-10">
     <% if logged_in? %>
-      <div class="flex justify-center w-full md:w-1/2">
+      <div class="flex justify-center w-full md:w-1/3 mb-10 md:mb-0">
         <%= link_to "https://twitter.com/share?url=#{appetizer_url(@appetizer)}&text=#{ERB::Util.url_encode("「#{@appetizer.alcohol.name}」に合うおつまみは、「#{@appetizer.name}」！\n酒菜ネット | ")}&hashtags=sakananet", target: '_blank', data: { toggle: "tooltip", placement: "bottom" },
             class: 'bg-slate-950 hover:bg-slate-700 text-white font-bold rounded-full shadow-xl px-5 py-3' do %>
           <i class="fa-brands fa-x-twitter"></i>で共有する
         <% end %>
       </div>
     <% end %>
-    <div class="flex justify-center w-full md:w-1/2">
-      <%= link_to "#{@appetizer.user.name}の組合せ一覧", user_appetizers_path(@appetizer.user), class: 'bg-point font-bold hover:bg-yellow-400 shadow-xl my-10 rounded-full px-5 py-3' %>
+    <div class="flex justify-center w-full md:w-1/3">
+      <%= link_to "#{@appetizer.user.name}の組合せ一覧", user_appetizers_path(@appetizer.user), class: 'bg-point font-bold hover:bg-yellow-400 shadow-xl rounded-full px-5 py-3  mb-10 md:mb-0' %>
     </div>
+    <% if logged_in? && current_user.own?(@appetizer) %>
+      <div class="flex justify-center w-full md:w-1/3">
+        <%= link_to appetizer_path(@appetizer), data: { turbo_method: :delete, turbo_confirm: t('defaults.message.deleted_confirm') }, class: 'bg-gray-400 font-bold hover:bg-red-400 shadow-xl rounded-full px-5 py-3' do %>
+          削除する<i class="fa-regular fa-trash-can fa-lg"></i>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
