--- a/app/views/appetizers/_form.html.erb
+++ b/app/views/appetizers/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="flex flex-col md:flex-row items-center">
     <div class="w-full md:w-1/3">
       <%= f.label :alcohol, 'お酒' %>
-      <%= f.grouped_collection_select :alcohol_id, @alcohol_genres, :alcohols, :genre, :id, :name, {include_blank: '未選択'}, class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
+      <%= f.grouped_collection_select :alcohol_id, @alcohol_genres, :alcohols, :genre, :id, :name, {include_blank: '未選択'}, id: "alcohol", class: 'border border-gray-400 rounded-lg w-full px-5 py-3 mb-5' %>
     </div>
 
     <div class="w-full md:w-1/3 text-center">
@@ -21,6 +21,6 @@
     </div>
   </div>
   <div class="sm-text-lg font-semibold text-center">
-    <%= f.submit '提案してもらう', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full px-5 py-3' %>
+    <%= f.button '提案してもらう', type:'submit', id: 'openModal', class: 'bg-point hover:bg-yellow-400 shadow-xl my-10 rounded-full px-5 py-3' %>
   </div>
 <% end %>
