--- a/app/views/appetizers/show.html.erb
+++ b/app/views/appetizers/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for(:title, t('.title')) %>
 <div class="mx-auto w-5/6 max-w-screen-sm border shadow-lg bg-amber-50 rounded-[10px] mt-20 p-3">
-  <h1 class="text-lg sm:text-2xl font-bold text-center border-dotted border-b-4 border-yellow-400 mt-5 mb-10"><%= @appetizer.name %></h1>
+  <h1 class="text-lg sm:text-2xl font-bold text-center border-dotted border-b-4 border-yellow-400 mt-5 mb-5"><%= @appetizer.name %></h1>
+  <p class="text-sm text-center bg-yellow-400 rounded-[5px] px-1 py-2 mb-5">AIによる回答のため、正確な内容ではない場合があります。予めご了承ください。</p>
   <% if @description.present? %>
     <p class="mb-5"><%= @description %></p>
   <% else %>
