fix: 投稿一覧ページのレイアウト崩れの修正に伴い、画像サイズを調整

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,7 +7,7 @@
       </div>
       <%= l post.created_at, format: :long %>
     </div>
-    <div class="flex items-center justify-center w-full">
+    <div class="flex items-center justify-center w-full h-80 overflow-hidden">
       <%= display_post_image(post) %>
     </div>
     <div class="flex justify-between">
