--- a/app/views/appetizers/new.html.erb
+++ b/app/views/appetizers/new.html.erb
@@ -2,8 +2,8 @@
 <div class="mx-auto w-5/6 max-w-screen-sm">
   <h1 class="text-lg sm:text-2xl font-bold my-20 text-center"><%= t('.title') %></h1>
   <div class="text-center mb-10">
-    <p>お酒、食材を選択すると、</p>
-    <p>食材をもとに、お酒に合うおつまみをAIが提案します。</p>
+    <p>お酒、3つの食材を選択すると、</p>
+    <p>3つの食材をもとに、お酒に合うおつまみをAIが提案します。</p>
     <p class="text-sm bg-yellow-400 rounded-[5px] px-1 py-2 mt-5">AIによる回答のため、正確な内容ではない場合があります。予めご了承ください。</p>
   </div>
   <%= render 'form', appetizer: @appetizer %>
