--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,8 +25,16 @@
           <%= image_tag 'default.jpg', class:"rounded-[10px] w-10 h-10" %>
         <% end %>
         <ul tabindex="0" class="absolute right-0 dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-40">
-          <li><%= link_to t('header.my_page'), profile_path %></li>
-          <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
+          <li>
+            <%= link_to profile_path do %>
+              <i class="fa-regular fa-user"></i> <%= t('header.my_page') %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to logout_path, data: { turbo_method: :delete } do %>
+              <i class="fa-solid fa-arrow-right-from-bracket"></i> <%= t('header.logout') %>
+            <% end %>
+          </li>
         </ul>
       </div>
     </div>
