--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full lg:w-1/3 md:w-1/2 p-4">
-  <div class="border bg-amber-50 shadow-xl rounded-lg p-4">
+  <div class="border bg-amber-50 shadow-xl rounded-lg p-4 h-full">
     <div class="flex flex-row justify-between">
       <div class="flex flex-row items-center">
         <%= display_user_avatar(post.user) %>
