--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -20,7 +20,10 @@
       <%= image_tag 'top_icon.webp', class: 'rounded-xl border shadow-2xl w-72 h-auto md:w-80 md:h-auto' %>
     </div>
   </div>
-  <p class="text-center text-lg text-gray-700 font-bold md:text-lg pt-5 mb-12">みんなのアイデアで晩酌、飲み会をより豊かに...</p>
+  <div class="flex flex-wrap justify-center">
+    <p class="text-center text-lg text-gray-700 font-bold md:text-lg md:pt-5 md:mb-12">みんなのアイデアで</p>
+    <p class="text-center text-lg text-gray-700 font-bold md:text-lg md:pt-5 mb-10">晩酌、飲み会をより豊かに...</p>
+  </div>
   <div class="flex justify-center items-center">
     <i class="fa-solid fa-angles-down fa-lg pr-2"></i>
     <h1 class="text-xl md:text-2xl font-bold">酒菜ネットの使い方</h1>
