--- a/app/views/appetizers/show.html.erb
+++ b/app/views/appetizers/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, t('.title')) %>
-<div class="mx-auto w-5/6 max-w-screen-sm border shadow-lg bg-amber-50 rounded-[10px] mt-20 p-3 mb-20">
+<div class="mx-auto w-5/6 max-w-screen-sm border shadow-lg bg-amber-50 rounded-[10px] mt-20 p-3 mb-10">
   <h1 class="text-lg sm:text-2xl font-bold text-center border-dotted border-b-4 border-yellow-400 mt-5 mb-5"><%= @appetizer.name %></h1>
   <p class="text-sm text-center bg-yellow-400 rounded-[5px] px-1 py-2 mb-5">AIによる回答のため、正確な内容ではない場合があります。予めご了承ください。</p>
   <% if @description.present? %>
@@ -27,24 +27,31 @@
   <% end %>
   <div class="flex flex-wrap items-center mb-10">
     <% if logged_in? %>
-      <div class="flex justify-center w-full md:w-1/3 mb-10 md:mb-0">
-        <%= link_to "https://twitter.com/share?url=#{appetizer_url(@appetizer)}&text=#{ERB::Util.url_encode("「#{@appetizer.alcohol.name}」に合うおつまみは、「#{@appetizer.name}」！\n酒菜ネット | ")}&hashtags=sakananet", target: '_blank', data: { toggle: "tooltip", placement: "bottom" },
-            class: 'bg-slate-950 hover:bg-slate-700 text-white font-bold rounded-full shadow-xl px-3 py-1 md:px-5 md:py-3' do %>
-          <i class="fa-brands fa-x-twitter"></i>で共有する
+      <div class="flex justify-center w-1/2 md:w-1/3 mb-10 md:mb-0">
+        <% x_url = "https://twitter.com/share?url=#{appetizer_url(@appetizer)}&text=#{ERB::Util.url_encode("「#{@appetizer.alcohol.name}」に合うおつまみは、「#{@appetizer.name}」！\n")}&hashtags=酒菜ネット&hashtags=sakananet" %>
+        <%= link_to x_url, title: 'Xで共有', target: '_blank', data: { toggle: "tooltip", placement: "bottom" },
+            class: "bg-slate-950 hover:bg-slate-700 text-white font-bold rounded-full shadow-xl px-3 py-2 md:px-5 md:py-3", rel: 'noopener noreferrer' do %>
+          <i class="fa-brands fa-x-twitter">共有</i>
+        <% end %>
+      </div>
+      <div class="flex justify-center w-1/2 md:w-1/3 mb-10 md:mb-0">
+        <% link_url = "http://line.me/R/msg/text/?" + CGI.escape("「#{@appetizer.alcohol.name}」に合うおつまみは、「#{@appetizer.name}」！\n---酒菜ネット---\n #{request.base_url + appetizers_path(@appetizer)}") %>
+        <%= link_to link_url, title: 'LINEで共有', class: 'flex items-center hover:text-[#00CC33] bg-[#f5f5f5] text-[#00B900] border font-bold rounded-full px-3 py-1 md:px-4 md:py-2', target: '_blank', rel: 'noopener noreferrer' do %>
+          <i class="fa-brands fa-line fa-2x text-[#00B900]"></i>共有
         <% end %>
       </div>
     <% end %>
-    <div class="flex justify-center w-1/2 md:w-1/3">
-      <%= link_to user_appetizers_path(@appetizer.user), class: 'bg-point font-bold hover:bg-yellow-400 shadow-xl rounded-full px-3 py-1 md:px-5 md:py-3' do %>
-        <i class="fa-solid fa-list mr-1"></i>組合せ一覧
-      <% end %>
-    </div>
     <% if logged_in? && current_user.own?(@appetizer) %>
-      <div class="flex justify-center w-1/2 md:w-1/3">
-        <%= link_to appetizer_path(@appetizer), data: { turbo_method: :delete, turbo_confirm: t('defaults.message.deleted_confirm') }, class: 'bg-gray-400 font-bold hover:bg-red-400 shadow-xl rounded-full px-3 py-1 md:px-5 md:py-3' do %>
-          <i class="fa-regular fa-trash-can fa-lg mr-1"></i>削除する
+      <div class="flex justify-center w-full md:w-1/3">
+        <%= link_to appetizer_path(@appetizer), data: { turbo_method: :delete, turbo_confirm: t('defaults.message.deleted_confirm') }, class: 'bg-gray-400 font-bold hover:bg-red-400 shadow-xl rounded-full px-4 py-2 md:px-5 md:py-3' do %>
+          <i class="fa-regular fa-trash-can fa-lg mr-1"></i>削除
         <% end %>
       </div>
     <% end %>
   </div>
+</div>
+<div class="flex justify-center mb-10">
+  <%= link_to user_appetizers_path(@appetizer.user), class: 'bg-point font-bold hover:bg-yellow-400 shadow-xl rounded-full px-4 py-2 md:px-5 md:py-3' do %>
+    <i class="fa-solid fa-list mr-2"></i><%= @appetizer.user.name %>の組合せ一覧
+  <% end %>
 </div>
