update: トップページ再更新

--- a/app/views/tops/_explanation.html.erb
+++ b/app/views/tops/_explanation.html.erb
@@ -83,7 +83,8 @@
         <% end %>
         <div class="text-left py-3 xl:py-10 mx-auto">
           <p>AI組合せの回答結果は、マイページより確認できます。</p>
-          <p class="mb-5">お酒、おつまみの組合せ解説、使用材料、作り方が表示されます。</p>
+          <p>お酒、おつまみの組合せ解説、使用材料、作り方が表示されます。</p>
+          <p class="mb-5">X、LINEでの共有ができます。</p>
           <i class="fa-solid fa-triangle-exclamation text-yellow-400"></i>ログインが必要です
         </div>
       </div>
